--- a/.github/workflows/website-stalker.yml
+++ b/.github/workflows/website-stalker.yml
@@ -13,17 +13,17 @@ jobs:
   website-stalker:
     runs-on: ubuntu-latest
     env:
-      WEBSITE_STALKER_FROM: ${{ secrets.WEBSITE_STALKER_FROM }}
-      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-      TELEGRAM_TARGET_CHAT: "-1001569012086"
-      TELEGRAM_DISABLE_WEB_PAGE_PREVIEW: true
+      #WEBSITE_STALKER_FROM: ${{ secrets.WEBSITE_STALKER_FROM }}
+      #TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      #TELEGRAM_TARGET_CHAT: "-1001569012086"
+      #TELEGRAM_DISABLE_WEB_PAGE_PREVIEW: true
     steps:
       - uses: EdJoPaTo/website-stalker-github-action@v1
 
       - uses: actions/checkout@v3
 
-      - name: Check website-stalker config
-        run: website-stalker check
+      #- name: Check website-stalker config
+      #  run: website-stalker check
 
       - name: Run website-stalker
         run: website-stalker run --all --commit
