--- a/.github/workflows/website-stalker.yml
+++ b/.github/workflows/website-stalker.yml
@@ -12,8 +12,8 @@ permissions:
 jobs:
   website-stalker:
     runs-on: ubuntu-latest
-    #env:
-      #WEBSITE_STALKER_FROM: ${{ secrets.WEBSITE_STALKER_FROM }}
+    env:
+      WEBSITE_STALKER_FROM: ${{ secrets.WEBSITE_STALKER_FROM }}
       #TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
       #TELEGRAM_TARGET_CHAT: "-1001569012086"
       #TELEGRAM_DISABLE_WEB_PAGE_PREVIEW: true
