--- a/.github/workflows/website-stalker.yml
+++ b/.github/workflows/website-stalker.yml
@@ -14,9 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       WEBSITE_STALKER_FROM: ${{ secrets.WEBSITE_STALKER_FROM }}
-      #TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-      #TELEGRAM_TARGET_CHAT: "-1001569012086"
-      #TELEGRAM_DISABLE_WEB_PAGE_PREVIEW: true
+      TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+      TELEGRAM_TARGET_CHAT: ${{ secrets.TELEGRAM_TARGET_CHAT }}
+      TELEGRAM_DISABLE_WEB_PAGE_PREVIEW: true
     steps:
       - uses: EdJoPaTo/website-stalker-github-action@v1
 
