--- a/website-stalker.yaml
+++ b/website-stalker.yaml
@@ -148,3 +148,7 @@ sites:
     editors:
       - css_select: .c-constructions
       - html_markdownify
+      
+ - url: https://www.bvg.de/de/verbindungen/stoerungsmeldungen?type=TRAFFIC
+    editors:
+      - html_markdownify
