--- a/website-stalker.yaml
+++ b/website-stalker.yaml
@@ -151,4 +151,5 @@ sites:
       
  - url: https://www.bvg.de/de/verbindungen/stoerungsmeldungen?type=TRAFFIC
     editors:
+      - css_select: article section
       - html_markdownify
