--- a/website-stalker.yaml
+++ b/website-stalker.yaml
@@ -152,5 +152,6 @@ sites:
   - url: https://www.bvg.de/de/verbindungen/stoerungsmeldungen?type=TRAFFIC
     editors:
       - css_select: article
+      - css_remove: .c-close-btn
       - html_markdownify
       
