--- a/website-stalker.yaml
+++ b/website-stalker.yaml
@@ -154,6 +154,6 @@ sites:
       
   - url: https://www.bvg.de/de/verbindungen/stoerungsmeldungen?type=TRAFFIC
     editors:
-      - css_select: article
+      - css_select: .DisruptionsOverview_DisruptionGroupSection__GTXXL
       - html_markdownify
       
