--- a/website-stalker.yaml
+++ b/website-stalker.yaml
@@ -151,10 +151,11 @@ sites:
       - css_remove: .o-close-details-mobile
       - css_remove: .c-button.c-button--link
       - html_markdownify
+      - html_url_canonicalize
       
   - url: https://www.bvg.de/de/verbindungen/stoerungsmeldungen?type=TRAFFIC
+    ignore_error: true
     editors:
       - css_select: .DisruptionsOverview_DisruptionGroupSection__GTXXL
       - html_markdownify
-      - ignore_error: true
       
