--- a/website-stalker.yaml
+++ b/website-stalker.yaml
@@ -136,6 +136,7 @@ sites:
       - css_remove: .o-close-details-mobile
       - css_remove: .c-button.c-button--link
       - html_markdownify
+      - html_textify
       - html_url_canonicalize
       
   - url: https://www.bvg.de/de/verbindungen/stoerungsmeldungen?type=TRAFFIC
