--- a/.github/workflows/website-stalker.yml
+++ b/.github/workflows/website-stalker.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Run website-stalker
         run: website-stalker run --all --commit
 
-      - name: Push to Prowl
-        run: curl --data "{\"apikey\": \"todo\", \"description\": \"todo\"}" "https://api.prowlapp.com/publicapi/add"
+      #- name: Push to Prowl
+      #  run: curl --data "{\"apikey\": \"todo\", \"description\": \"todo\"}" "https://api.prowlapp.com/publicapi/add"
 
       - if: always()
         run: git push
