--- a/website-stalker.yaml
+++ b/website-stalker.yaml
@@ -128,6 +128,7 @@ sites:
     editors:
       - css_select: .product-box__info
       - css_remove: .product-box__excl-tax
+      - html_url_canonicalize
       - html_markdownify
       
   - url: https://sbahn.berlin/fahren/bauen-stoerung/
